Arrancando con bootstrap

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li class="nav__item"> <a href="./pages/tabla-posiciones.html"> Tabla Posiciones </a></li>
                 <li class="nav__item"> <a href="./pages/escuderias.html"> Escuderias </a></li>
                 <li class="nav__item"> <a href="./pages/pilotos.html"> Pilotos </a></li>
-                <li class="nav__item"> <a href="../pages/contacto.html"> Contacto </a></li>
+                <li class="nav__item"> <a href="./pages/contacto.html"> Contacto </a></li>
             </ul>
         </nav>
     </header>
