--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -21,10 +21,10 @@
         <nav class="nav">
             <ul class="nav__lista">
                 <li class="nav__item"> <a href="../index.html"> Inicio </a></li>
-                <li class="nav__item"> <a href="../pages/tabla-posiciones.html"> Tabla Posiciones </a></li>
-                <li class="nav__item"> <a href="../pages/escuderias.html"> Escuderias </a></li>
-                <li class="nav__item"> <a href="../pages/pilotos.html"> Pilotos </a></li>
-                <li class="nav__item"> <a href="../pages/contacto.html"> Contacto </a></li>
+                <li class="nav__item"> <a href="./tabla-posiciones.html"> Tabla Posiciones </a></li>
+                <li class="nav__item"> <a href="./escuderias.html"> Escuderias </a></li>
+                <li class="nav__item"> <a href="./pilotos.html"> Pilotos </a></li>
+                <li class="nav__item"> <a href="./contacto.html"> Contacto </a></li>
             </ul>
         </nav>
     </header>
@@ -73,7 +73,6 @@
             </form>
         </section>
     </main>
-
     <footer class="footer">
         <div class="footer__cont">
             <h4 class="footer__titu"> FORMULA ONE </h4>
@@ -89,6 +88,5 @@
         </div>
         <img src="../img/logomini.jpg" alt="" class="header__img">
     </footer>
-    </section>
     </body>
     </html>
