--- a/pages/tabla-posiciones.html
+++ b/pages/tabla-posiciones.html
@@ -21,10 +21,10 @@
         <nav class="nav">
             <ul class="nav__lista">
                 <li class="nav__item"> <a href="../index.html"> Inicio </a></li>
-                <li class="nav__item"> <a href="../pages/tabla-posiciones.html"> Tabla Posiciones </a></li>
-                <li class="nav__item"> <a href="../pages/escuderias.html"> Escuderias </a></li>
-                <li class="nav__item"> <a href="../pages/pilotos.html"> Pilotos </a></li>
-                <li class="nav__item"> <a href="../pages/contacto.html"> Contacto </a></li>
+                <li class="nav__item"> <a href="./tabla-posiciones.html"> Tabla Posiciones </a></li>
+                <li class="nav__item"> <a href="./escuderias.html"> Escuderias </a></li>
+                <li class="nav__item"> <a href="./pilotos.html"> Pilotos </a></li>
+                <li class="nav__item"> <a href="./contacto.html"> Contacto </a></li>
             </ul>
         </nav>
     </header>
