antes de bootstrap

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,116 +15,16 @@
     <title>Agustin Santander CODER</title>
 </head>
 
-<body class="body">
-    <div class="boby-index">
-    <header class="header" id="inicio">
-        <H1 class="header__titulo">FORMULA ONE</H1>
-        <img src="./img/logomini.jpg" alt="" class="header__img">
-        <nav class="nav">
-            <ul class="nav__lista">
-                <li class="nav__item"> <a href="#inicio"> Inicio </a></li>
-                <li class="nav__item"> <a href="#noticia"> Noticas </a></li>
-                <li class="nav__item"> <a href="./pages/tabla-posiciones.html"> Tabla Posiciones </a></li>
-                <li class="nav__item"> <a href="./pages/escuderias.html"> Escuderias </a></li>
-                <li class="nav__item"> <a href="./pages/pilotos.html"> Pilotos </a></li>
-                <li class="nav__item"> <a href="./pages/contacto.html"> Contacto </a></li>
-            </ul>
-        </nav>
-    </header>
-    <main class="main-noticias">
-        <!-- PORTADA -->
-        <section class="portada">
-        </section>
-        <!-- PORTADA -->
+<body>
 
-        <!-- Seccion informativa -->
 
-        <section class="info">
-            <h2 class="info__titulo"> ¿Que es la Formula 1? </h2>
-            <p class="info__parrafo"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, autem vel illum
-                quae, delectus expedita debitis cumque, eligendi est corrupti tempora atque reiciendis. Laudantium fuga
-                velit excepturi nihil similique illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
-                accusantium iure praesentium, dignissimos culpa soluta et voluptatum unde, sapiente hic nesciunt
-                veritatis excepturi! Repellat distinctio exercitationem, illum consectetur eos</explicabo>
-            </p>
-            <video src="./video/top-10-adelantamientos.mp4" controls muted class="info__video"></video>
-        </section>
-        <hr>
-        <!-- Seccion noticias -->
-        <section class="noticia" id="noticia">
-            <h2 class="noticia__titu--principal"> Noticias </h2>
-        </section>
-        <section class="noticia__box">
-            <article class="noticia__item">
-                <h3 class="noticia__item--titulo"> Latifi abandona la categoria al final de la temporada</h3>
-                <img src="./img/goatifi.jpg" alt="Imagen de Latifi" class="noticia__img">
-                <p> Williams confirma que Nikolas Latifi dejara de ser su piloto del equipo de Formula 1 a partir de la
-                    proxima temporada.</p>
-            </article>
-            <article class="noticia__item">
-                <h3 class="noticia__item--titulo"> Max Verstappen, cada vez mas cerca del bicampeonato.</h3>
-                <img src="./img/maxverstappen-chiquito.jpg" alt="Max Verstappen celebrando una victoria"
-                    class="noticia__img">
-                <p> Para que Max sea campeon, lo unico que necesita es conseguir la victoria con vuelta rapida en Japon
-                </p>
-            </article>
-            <article class="noticia__item">
-                <h3 class="noticia__item--titulo"> Red Bull y Honda se han reunido hoy en Tokio para comenzar las
-                    conversaciones sobre los motores de 2026.</h3>
-                <img src="img/noticia-redbullhonda.jpg" alt="Max señalando el logo de Honda en su pecho"
-                    class="noticia__img">
-                <p>Lorem ipsum dolor sit amet.</p>
-            </article>
-            <article class="noticia__item">
-                <h3 class="noticia__item--titulo">Las representaciones de Schumacher y Haas han empezado a negociar la
-                    extensión de contrato del piloto.</h3>
-                <img src="img/noticia-mick.jpg" alt="Imagen de Mick Schumacher" class="noticia__img">
-                <p>Lorem ipsum dolor sit amet.</p>
-            </article>
-            <article class="noticia__item">
-                <h3 class="noticia__item--titulo"> Toto Wolff no planea viajar al GP de Japón, y se perdería su 2º GP en
-                    9 años.</h3>
-                <img src="img/noticia-toto.jpg" alt="Imagen de Toto Wolff" class="noticia__img">
-                <p>Lorem ipsum dolor sit amet.</p>
-            </article>
-            <article class="noticia__item">
-                <h3 class="noticia__item--titulo"> El interés de Porsche por F1 ha terminado.</h3>
-                <img src="img/noticia-porche.jpg" alt="Diseño del supuesto auto de porche para la formula 1"
-                    class="noticia__img">
-                <p>Lorem ipsum dolor sit amet.</p>
-            </article>
-            <article class="noticia__item">
-                <h3 class="noticia__item--titulo"> Luego de su DNF, Esteban Ocon tuvo que pasar por el metro de Singapur
-                    para volver al paddock.</h3>
-                <img src="img/noticia-ocon.jpg" alt="Ocon ingresando al subterraneo de Singapure" class="noticia__img">
-                <p>Lorem ipsum dolor sit amet.</p>
-            </article>
-            <article class="noticia__item">
-                <h3 class="noticia__item--titulo"> Toto Wolff está seguro de que Hamilton firmará otro contrato: «Me
-                    dijo que le quedan 5 años por delante».</h3>
-                <img src="img/noticia-hamilton.jpg" alt="Toto Wolff con Lewis Hamilton" class="noticia__img">
-                <p>Lorem ipsum dolor sit amet.</p>
-            </article>
-        </section>
-    </div>
 
-    </main>
 
-    <footer class="footer">
-        <div class="footer__cont">
-            <h4 class="footer__titu"> FORMULA ONE </h4>
-            <ul class="footer__lista">
-                <li class="footer__item"> <a href="https://www.youtube.com/c/F1/videos" target="_blank"> Youtube </a>
-                </li>
-                <li class="footer__item"> <a href="https://www.instagram.com/f1/?hl=es" target="_blank"> Instagram </a>
-                </li>
-                <li class="footer__item"> <a href="https://www.facebook.com/Formula1/" target="_blank"> Facebook </a>
-                </li>
-                <li class="footer__item"> <a href="https://twitter.com/F1" target="_blank"> Twitter </a></li>
-            </ul>
-        </div>
-        <img src="./img/logomini.jpg" alt="" class="footer__img">
-    </footer>
+    <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
+
+
+
+
 
 </html>
