terminando con grids

--- a/pages/tabla-posiciones.html
+++ b/pages/tabla-posiciones.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,15 +17,16 @@
 
 <body class="body">
     <header class="header" id="inicio">
-        <H1 class="header__titulo">FORMULA ONE</H1>
-        <img src="../img/logomini.jpg" alt="" class="header__img">
+        <div class="marca">
+            <H1 class="marca__titulo">FORMULA ONE</H1>
+            <img src="../img/logomini.jpg" alt="" class="marca__img">
+        </div>
         <nav class="nav">
             <ul class="nav__lista">
                 <li class="nav__item"> <a href="../index.html"> Inicio </a></li>
-                <li class="nav__item"> <a href="./tabla-posiciones.html"> Tabla Posiciones </a></li>
-                <li class="nav__item"> <a href="./escuderias.html"> Escuderias </a></li>
-                <li class="nav__item"> <a href="./pilotos.html"> Pilotos </a></li>
-                <li class="nav__item"> <a href="./contacto.html"> Contacto </a></li>
+                <li class="nav__item"> <a href="../pages/tabla-posiciones.html"> Tabla Posiciones </a></li>
+                <li class="nav__item"> <a href="../pages/escuderias.html"> Escuderias </a></li>
+                <li class="nav__item"> <a href="../pages/pilotos.html"> Pilotos </a></li>
             </ul>
         </nav>
     </header>
