--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,15 +17,16 @@
 
 <body class="body">
     <header class="header" id="inicio">
-        <H1 class="header__titulo">FORMULA ONE</H1>
-        <img src="../img/logomini.jpg" alt="" class="header__img">
+        <div class="marca">
+            <H1 class="marca__titulo">FORMULA ONE</H1>
+            <img src="../img/logomini.jpg" alt="" class="marca__img">
+        </div>
         <nav class="nav">
             <ul class="nav__lista">
                 <li class="nav__item"> <a href="../index.html"> Inicio </a></li>
-                <li class="nav__item"> <a href="./tabla-posiciones.html"> Tabla Posiciones </a></li>
-                <li class="nav__item"> <a href="./escuderias.html"> Escuderias </a></li>
-                <li class="nav__item"> <a href="./pilotos.html"> Pilotos </a></li>
-                <li class="nav__item"> <a href="./contacto.html"> Contacto </a></li>
+                <li class="nav__item"> <a href="../pages/tabla-posiciones.html"> Tabla Posiciones </a></li>
+                <li class="nav__item"> <a href="../pages/escuderias.html"> Escuderias </a></li>
+                <li class="nav__item"> <a href="../pages/pilotos.html"> Pilotos </a></li>
             </ul>
         </nav>
     </header>
@@ -74,19 +76,23 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="footer__cont">
-            <h4 class="footer__titu"> FORMULA ONE </h4>
-            <ul class="footer__lista">
-                <li class="footer__item"> <a href="https://www.youtube.com/c/F1/videos" target="_blank"> Youtube </a>
-                </li>
-                <li class="footer__item"> <a href="https://www.instagram.com/f1/?hl=es" target="_blank"> Instagram </a>
-                </li>
-                <li class="footer__item"> <a href="https://www.facebook.com/Formula1/" target="_blank"> Facebook </a>
-                </li>
-                <li class="footer__item"> <a href="https://twitter.com/F1" target="_blank"> Twitter </a></li>
-            </ul>
+
+        <div class="footer-tituimg">
+            <h4 class="footer-titu">FORMULA ONE</h4>
+            <img src="./img/logomini.jpg" class="footer-img">
         </div>
-        <img src="../img/logomini.jpg" alt="" class="header__img">
+        <h4>Seguinos en nuestras redes</h4>
+        <div class="footer-redes">
+            <i class="bi bi-instagram"> <a href="https://www.instagram.com/f1/?hl=es" target="_blank"> Instagram </a> </i>
+            <i class="bi bi-facebook"> <a href="https://www.facebook.com/Formula1/" target="_blank"> Facebook </a> </i>
+            <i class="bi bi-youtube"> <a href="https://www.youtube.com/c/F1/videos" target="_blank"> Youtube </a> </i>
+            <i class="bi bi-twitter"> <a href="https://twitter.com/F1" target="_blank"> Twitter </a> </i>
+        </div>
+        <div class="seccion__contacto">
+            <h4> Contactanos para consultas! </h4>
+            <a href="./contacto.html" class="footer__contacto"> Contacto </a></li>
+
+        </div>
     </footer>
     </body>
     </html>
