2da entrega terminada

--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@
     <main>
         <!-- PORTADA -->
         <section class="portada">
-            <div class="portada__titu">
-            </div>
         </section>
         <!-- PORTADA -->
 
@@ -73,37 +71,37 @@
                     conversaciones sobre los motores de 2026.</h3>
                 <img src="img/noticia-redbull.jpg" alt="Max señalando el logo de Honda en su pecho"
                     class="noticia__img">
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p> Honda está interesada en un "acuerdo de marca revisado" para 2023-2025.</p>
             </article>
             <article class="noticia__item">
                 <h3 class="noticia__item--titulo">Las representaciones de Schumacher y Haas han empezado a negociar la
                     extensión de contrato del piloto.</h3>
                 <img src="img/noticia-mick-schumacher.jpg" alt="Imagen de Mick Schumacher" class="noticia__img">
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Mick todavía está en la lista porque de lo contrario ya habríamos tomado una decisión.</p>
             </article>
             <article class="noticia__item">
                 <h3 class="noticia__item--titulo"> Toto Wolff no planea viajar al GP de Japón, y se perdería su 2º GP en
                     9 años.</h3>
                 <img src="img/noticia-totowolf.jpg" alt="Imagen de Toto Wolff" class="noticia__img">
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>El motivo de esto, es que asistira a la junta de la FIA por el limite de presupuesto.</p>
             </article>
             <article class="noticia__item">
                 <h3 class="noticia__item--titulo"> El interés de Porsche por F1 ha terminado.</h3>
                 <img src="img/noticia-porche.jpg" alt="Diseño del supuesto auto de porche para la formula 1"
                     class="noticia__img">
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Esto se debe a los altos costos que demanda ingresar a la categoria.</p>
             </article>
             <article class="noticia__item">
                 <h3 class="noticia__item--titulo"> Luego de su DNF, Esteban Ocon tuvo que pasar por el metro de Singapur
                     para volver al paddock.</h3>
                 <img src="img/noticia-ocon.jpg" alt="Ocon ingresando al subterraneo de Singapure" class="noticia__img">
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Cosas que solo pueden suceder en los circuitos urbanos.</p>
             </article>
             <article class="noticia__item">
                 <h3 class="noticia__item--titulo"> Toto Wolff está seguro de que Hamilton firmará otro contrato: «Me
                     dijo que le quedan 5 años por delante».</h3>
                 <img src="img/noticia-hamilton_wolff.jpg" alt="Toto Wolff con Lewis Hamilton" class="noticia__img">
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>"No tengo dudas de que firmaremos un nuevo contrato."</p>
             </article>
         </section>
     </main>
