--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <article class="primer-noticia noticia__item">
                 <h3 class="noticia__item--titulo"> Latifi abandona la categoria al final de la temporada</h3>
                 <img src="./img/noticia-latifi.jpg" alt="Imagen de Latifi" class="noticia__img1 noticia__img">
-                <p> Williams confirma que Nikolas Latifi dejara de ser su piloto del equipo de Formula 1 a partir de la
+                <p class="noticia__texto"> Williams confirma que Nikolas Latifi dejara de ser su piloto del equipo de Formula 1 a partir de la
                     proxima temporada.</p>
             </article>
             <article class="segunda-noticia noticia__item">
@@ -124,5 +124,5 @@
 
         </div>
     </footer>
-
+</body>
 </html>
