--- a/pages/pilotos.html
+++ b/pages/pilotos.html
@@ -265,7 +265,7 @@
 
         <div class="footer-tituimg">
             <h4 class="footer-titu">FORMULA ONE</h4>
-            <img src="./img/logomini.jpg" class="footer-img">
+            <img src="../img/logomini.jpg" class="footer-img">
         </div>
         <h4>Seguinos en nuestras redes</h4>
         <div class="footer-redes">
@@ -277,7 +277,6 @@
         <div class="seccion__contacto">
             <h4> Contactanos para consultas! </h4>
             <a href="./contacto.html" class="footer__contacto"> Contacto </a></li>
-
         </div>
     </footer>
 </body>
