--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -79,7 +79,7 @@
 
         <div class="footer-tituimg">
             <h4 class="footer-titu">FORMULA ONE</h4>
-            <img src="./img/logomini.jpg" class="footer-img">
+            <img src="../img/logomini.jpg" class="footer-img">
         </div>
         <h4>Seguinos en nuestras redes</h4>
         <div class="footer-redes">
