--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <H1 class="marca__titulo">FORMULA ONE</H1>
             <img src="./img/logomini.jpg" alt="" class="marca__img">
         </div>
-        <nav class="nav">
-            <ul class="nav__lista">
+        <nav>
+            <ul class="nav">
                 <li class="nav__item"> <a href="#inicio"> Inicio </a></li>
                 <li class="nav__item"> <a href="./pages/tabla-posiciones.html"> Tabla Posiciones </a></li>
                 <li class="nav__item"> <a href="./pages/escuderias.html"> Escuderias </a></li>
