--- a/pages/escuderias.html
+++ b/pages/escuderias.html
@@ -21,8 +21,8 @@
             <H1 class="marca__titulo">FORMULA ONE</H1>
             <img src="../img/logomini.jpg" alt="" class="marca__img">
         </div>
-        <nav class="nav">
-            <ul class="nav__lista">
+        <nav>
+            <ul class="nav">
                 <li class="nav__item"> <a href="../index.html"> Inicio </a></li>
                 <li class="nav__item"> <a href="../pages/tabla-posiciones.html"> Tabla Posiciones </a></li>
                 <li class="nav__item"> <a href="../pages/escuderias.html"> Escuderias </a></li>
@@ -39,76 +39,76 @@
             <h2 class=" escuderia__titu--principal"> ESCUDERIAS </h2>
         </section>
         <section class="escuderia__box">
-            <article class="escuderia__item">
-                <h3 class="escuderia__item--titulo"> Red Bull Racing </h3>
-                <img src="../img/logo-redbull.jpg" alt="Logo de Red Bull" class="escuderia__logo">
-                <img src="../img/car-redbull.jpg" alt="Imagen del auto de Red Bull" class="escuderia__auto">
+            <article class="escuderia__box__item">
+                <h3 class="escuderia__box__titulo"> Red Bull Racing </h3>
+                <img src="../img/logo-redbull.jpg" alt="Logo de Red Bull" class="escuderia__box__logo">
+                <img src="../img/car-redbull.jpg" alt="Imagen del auto de Red Bull" class="escuderia__box__auto">
                 <p> Red Bull Racing es un equipo austriaco con sede en Inglaterra, los inicios de la escuderia remontan
                     al 1997 fundado por Jackie Stewart. El equipo cuenta hasta el momento con 5 campeonatos mundiales.
                 </p>
                 <p>Pilotos destacados: Sebastian Vettel, Max Verstappen, Mark Webber, Daniel Ricciardo, Sergio Perez.
                 </p>
             </article>
-            <article class="escuderia__item">
-                <h3 class="escuderia__item--titulo"> Mercedes </h3>
-                <img src="../img/logo-mercedes.jpg" alt="Logo de Mercedes" class="escuderia__logo">
-                <img src="../img/car-mercedes.jpg" alt="Imagen del auto de Mercedes" class="escuderia__auto">
+            <article class="escuderia__box__item">
+                <h3 class="escuderia__box__titulo"> Mercedes </h3>
+                <img src="../img/logo-mercedes.jpg" alt="Logo de Mercedes" class="escuderia__box__logo">
+                <img src="../img/car-mercedes.jpg" alt="Imagen del auto de Mercedes" class="escuderia__box__auto">
                 <p>Mercedes-Benz es una de las automotrices más exitosas de la Fórmula 1, considerada uno de los cuatro equipos con mejores resultados, junto con Williams, Ferrari y McLaren. Participó inicialmente como constructor en Fórmula 1 en 1954 y 1955, y volvió a hacerlo desde 2010 hasta la actualidad. El equipo alemán ganó ocho Campeonatos de Constructores de forma consecutiva (de 2014 a 2021). </p>
                 <p>Pilotos destacados: Lewis Hamilton, Nico Rosberg, Juan M. Fangio, Valteri Bottas.</p>
             </article>
-            <article class="escuderia__item">
-                <h3 class="escuderia__item--titulo"> Ferrari </h3>
-                <img src="../img/logo-ferrari.jpg" alt="Logo de Ferrari" class="escuderia__logo">
-                <img src="../img/car-ferrari.jpg" alt="Imagen del auto de Ferrari" class="escuderia__auto">
+            <article class="escuderia__box__item">
+                <h3 class="escuderia__box__titulo"> Ferrari </h3>
+                <img src="../img/logo-ferrari.jpg" alt="Logo de Ferrari" class="escuderia__box__logo">
+                <img src="../img/car-ferrari.jpg" alt="Imagen del auto de Ferrari" class="escuderia__box__auto">
                 <p>La primera participación de Ferrari en Fórmula 1 fue en el Gran Premio de Mónaco de 1950, con el Tipo 125 F1. Ferrari es considerado uno de los cuatro grandes equipos de Fórmula 1, junto con Williams, McLaren y Mercedes.Es el equipo activo más antiguo del campeonato, y es el que ha conseguido más victorias, campeonatos de pilotos (15) y campeonatos de constructores (16). </p>
                 <p>Pilotos destacados: Michael Schumacher, Niki Lauda, Alain Prost, Carlos Reutemann. </p>
             </article>
-            <article class="escuderia__item">
-                <h3 class="escuderia__item--titulo"> Mclaren </h3>
-                <img src="../img/logo-mclaren.jpg" alt="Logo de Mclaren" class="escuderia__logo">
-                <img src="../img/car-mclaren.jpg" alt="Imagen del auto de Mclaren" class="escuderia__auto">
+            <article class="escuderia__box__item">
+                <h3 class="escuderia__box__titulo"> Mclaren </h3>
+                <img src="../img/logo-mclaren.jpg" alt="Logo de Mclaren" class="escuderia__box__logo">
+                <img src="../img/car-mclaren.jpg" alt="Imagen del auto de Mclaren" class="escuderia__box__auto">
                 <p>McLaren, es una escudería británica de automovilismo con sede en Woking, fundada en 1963 por Bruce McLaren. A lo largo de los años ha obtenido 8 Campeonatos de Constructores (tercera en el historial), 12 Campeonatos de Pilotos (segunda), 183 victorias (segunda), 155 poles (segunda) y 489 podios (segunda).</p>
                 <p>Pilotos destacados: </p>
             </article>
-            <article class="escuderia__item">
-                <h3 class="escuderia__item--titulo"> Aston Martin </h3>
-                <img src="../img/logo-aston.jpg" alt="Logo de Aston Martin" class="escuderia__logo">
-                <img src="../img/car-aston.jpg" alt="Imagen del auto de Aston Martin" class="escuderia__auto">
+            <article class="escuderia__box__item">
+                <h3 class="escuderia__box__titulo"> Aston Martin </h3>
+                <img src="../img/logo-aston.jpg" alt="Logo de Aston Martin" class="escuderia__box__logo">
+                <img src="../img/car-aston.jpg" alt="Imagen del auto de Aston Martin" class="escuderia__box__auto">
                 <p>Aston Martin es una escudería británica de Fórmula 1 que a finales de 2020 regresó a la parrilla, gracias a que Lawrence Stroll invirtió en Aston Martin £182 millones de libras, lo cual le proporcionó el 20 % de las acciones del fabricante, con tal movimiento decide usar la imagen de Aston Martin para convertir a partir de 2021 al equipo Racing Point en Aston Martin F1 Team. Actualmente tiene su base en Silverstone, Reino Unido</p>
                 <p> Pilotos destacados: Sebastian Vettel, Fernando Alonso(2023), Lance Stroll, Niko Hulkenberg. </p>
             </article>
-            <article class="escuderia__item">
-                <h3 class="escuderia__item--titulo"> AlphaTauri </h3>
-                <img src="../img/logo-alphatauri.jpg" alt="Logo de AlphaTauri" class="escuderia__logo">
-                <img src="../img/car-alphatauri.jpg" alt="Imagen del auto de AlphaTauri" class="escuderia__auto">
+            <article class="escuderia__box__item">
+                <h3 class="escuderia__box__titulo"> AlphaTauri </h3>
+                <img src="../img/logo-alphatauri.jpg" alt="Logo de AlphaTauri" class="escuderia__box__logo">
+                <img src="../img/car-alphatauri.jpg" alt="Imagen del auto de AlphaTauri" class="escuderia__box__auto">
                 <p>Scuderia AlphaTauri, más conocida simplemente como AlphaTauri, es una escudería italiana de Fórmula 1, propiedad de la empresa Red Bull. El constructor fue renombrado para el año 2020 de Toro Rosso a AlphaTauri para promocionar a la empresa de ropa del mismo nombre. </p>
                 <p> Pilotos destacados: Sebastian Vettel, Piere Gasly, Yuki Tsunouda, Dani Kvyat. </p>
             </article>
-            <article class="escuderia__item">
-                <h3 class="escuderia__item--titulo"> Williams </h3>
-                <img src="../img/logo-williams.jpg" alt="Logo de Williams" class="escuderia__logo">
-                <img src="../img/car-williams.jpg" alt="Imagen del auto de Williams" class="escuderia__auto">
+            <article class="escuderia__box__item">
+                <h3 class="escuderia__box__titulo"> Williams </h3>
+                <img src="../img/logo-williams.jpg" alt="Logo de Williams" class="escuderia__box__logo">
+                <img src="../img/car-williams.jpg" alt="Imagen del auto de Williams" class="escuderia__box__auto">
                 <p>Williams Grand Prix Engineering Limited, comúnmente conocido como Williams Racing, es un equipo de Fórmula 1 creado en 1977 por Frank Williams y Patrick Head. Williams es considerado uno de los cuatro grandes equipos de Fórmula 1, junto con Ferrari, McLaren y Mercedes. La primera carrera de la escudería fue en el Gran Premio de España de 1977, cuando el equipo corrió con un chasis March y Patrick Nève como piloto.  </p>
                 <p> Pilotos destacados: Alan Jones, Alain Prost, Damon Hill, Nelson Piquet. </p>
             </article>
-            <article class="escuderia__item">
-                <h3 class="escuderia__item--titulo"> Alfa Romeo </h3>
-                <img src="../img/logo-alfa.jpg" alt="Logo de Alfa Romeo" class="escuderia__logo">
-                <img src="../img/car-alfaromeo.jpg" alt="Imagen del auto de Alfa Romeo" class="escuderia__auto">
+            <article class="escuderia__box__item">
+                <h3 class="escuderia__box__titulo"> Alfa Romeo </h3>
+                <img src="../img/logo-alfa.jpg" alt="Logo de Alfa Romeo" class="escuderia__box__logo">
+                <img src="../img/car-alfaromeo.jpg" alt="Imagen del auto de Alfa Romeo" class="escuderia__box__auto">
                 <p>Alfa Romeo ha participado como una escudería de Fórmula 1 en diferentes periodos. Antes de su retorno como equipo constructor en 2019, tras renombrar la estructura de Sauber y asumir la licencia suiza, participó en los campeonatos de las temporadas 1950, 1951 y entre 1979 y 1985 como escudería italiana. </p>
                 <p> Pilotos destacados: Giuseppe Campari, Ugo Sivocci, Antonio Ascari, Valteri Bottas.  </p>
             </article>
-            <article class="escuderia__item">
-                <h3 class="escuderia__item--titulo"> Haas </h3>
-                <img src="../img/logo-haas.jpg" alt="Logo de Haas" class="escuderia__logo">
-                <img src="../img/car-haas.jpg" alt="Imagen del auto de Haas" class="escuderia__auto">
+            <article class="escuderia__box__item">
+                <h3 class="escuderia__box__titulo"> Haas </h3>
+                <img src="../img/logo-haas.jpg" alt="Logo de Haas" class="escuderia__box__logo">
+                <img src="../img/car-haas.jpg" alt="Imagen del auto de Haas" class="escuderia__box__auto">
                 <p> Haas F1 Team, anteriormente conocido bajo el nombre de Haas Racing Developments, es un equipo estadounidense de carreras de Fórmula 1 construido por el empresario y copropietario del equipo Stewart-Haas Racing de la NASCAR Sprint Cup Series, Gene Haas, tras tener la propuesta de Guenther Steiner y que fue fundado y aprobada su entrada por la comisión de la FIA y por Bernie Ecclestone en el mes de abril de 2014. El equipo debutó en la temporada 2016.</p>
                 <p> Pilotos destacados: Romain Grosjean, Mick Schumacher, Kevin Magnussen.</p>
             </article>
-            <article class="escuderia__item">
-                <h3 class="escuderia__item--titulo"> Alpine </h3>
-                <img src="../img/logo-alpine.jpg" alt="Logo de Alpine" class="escuderia__logo">
-                <img src="../img/car-alpine.jpg" alt="Imagen del auto de Alpine" class="escuderia__auto">
+            <article class="escuderia__box__item">
+                <h3 class="escuderia__box__titulo"> Alpine </h3>
+                <img src="../img/logo-alpine.jpg" alt="Logo de Alpine" class="escuderia__box__logo">
+                <img src="../img/car-alpine.jpg" alt="Imagen del auto de Alpine" class="escuderia__box__auto">
                 <p> Alpine F1 Team (por motivos de patrocinio BWT Alpine F1 Team), es una escudería francesa de Fórmula 1 con sede en Reino Unido y propiedad del Grupo Renault, que hizo su debut en la temporada 2021. Reemplazó a Renault para promocionar a Automobiles Alpine. </p>
                 <p>Pilotos destacados: Fernando Alonso, Esteban Ocon, Dani Kvyat, Jordan King.</p>
             </article>
