--- a/pages/pilotos.html
+++ b/pages/pilotos.html
@@ -21,8 +21,8 @@
             <H1 class="marca__titulo">FORMULA ONE</H1>
             <img src="../img/logomini.jpg" alt="" class="marca__img">
         </div>
-        <nav class="nav">
-            <ul class="nav__lista">
+        <nav>
+            <ul class="nav">
                 <li class="nav__item"> <a href="../index.html"> Inicio </a></li>
                 <li class="nav__item"> <a href="../pages/tabla-posiciones.html"> Tabla Posiciones </a></li>
                 <li class="nav__item"> <a href="../pages/escuderias.html"> Escuderias </a></li>
@@ -39,8 +39,8 @@
             <h2 class=" pilotos__titu--principal"> PILOTOS </h2>
         </section>
         <section class="pilotos__box">
-            <article class="pilotos__item">
-                <h3 class="pilotos__item--titulo"> Lewis Hamilton </h3>
+            <article class="pilotos__box__item">
+                <h3 class="pilotos__box__titulo"> Lewis Hamilton </h3>
                 <img src="../img/pilot-hamilton.jpg" alt="Imagen de Hamilton" class="pilotos__logo">
                 <p> Numero: #44</p>
                 <p> Nacionalidad: Reino Unido</p>
@@ -50,8 +50,8 @@
                 <p> Carreras ganadas: 103</p>
                 <p> Escuderia actual: Mercedes</p>
             </article>
-            <article class="pilotos__item">
-                <h3 class="pilotos__item--titulo"> George Russell </h3>
+            <article class="pilotos__box__item">
+                <h3 class="pilotos__box__titulo"> George Russell </h3>
                 <img src="../img/pilot-russell.jpg" alt="Imagen de Russell" class="pilotos__logo">
                 <p> Numero: #63</p>
                 <p> Nacionalidad: Reino Unido</p>
@@ -61,8 +61,8 @@
                 <p> Carreras ganadas: 0</p>
                 <p> Escuderia actual: Mercedes</p>
             </article>
-            <article class="pilotos__item">
-                <h3 class="pilotos__item--titulo"> Charles Lecrerc</h3>
+            <article class="pilotos__box__item">
+                <h3 class="pilotos__box__titulo"> Charles Lecrerc</h3>
                 <img src="../img/pilot-leclerc.jpg" alt="Imagen de Lecrerc" class="pilotos__logo">
                 <p> Numero: #16</p>
                 <p> Nacionalidad: Monaco</p>
@@ -72,8 +72,8 @@
                 <p> Carreras ganadas: </p>
                 <p> Escuderia actual: Ferrari</p>
             </article>
-            <article class="pilotos__item">
-                <h3 class="pilotos__item--titulo"> Carlos Sainz </h3>
+            <article class="pilotos__box__item">
+                <h3 class="pilotos__box__titulo"> Carlos Sainz </h3>
                 <img src="../img/pilot-sainz.jpg" alt="Imagen de Sainz" class="pilotos__logo">
                 <p> Numero: #55</p>
                 <p> Nacionalidad: España</p>
@@ -83,8 +83,8 @@
                 <p> Carreras ganadas: 1 </p>
                 <p> Escuderia actual: Ferrari </p>
             </article>
-            <article class="pilotos__item">
-                <h3 class="pilotos__item--titulo"> Max Verstappen</h3>
+            <article class="pilotos__box__item">
+                <h3 class="pilotos__box__titulo"> Max Verstappen</h3>
                 <img src="../img/pilot-verstappen.jpg" alt="Imagen de Verstappen" class="pilotos__logo">
                 <p> Numero: #1</p>
                 <p> Nacionalidad: Holanda </p>
@@ -94,8 +94,8 @@
                 <p> Carreras ganadas: </p>
                 <p> Escuderia actual: Red Bull Racing</p>
             </article>
-            <article class="pilotos__item">
-                <h3 class="pilotos__item--titulo"> Sergio Perez </h3>
+            <article class="pilotos__box__item">
+                <h3 class="pilotos__box__titulo"> Sergio Perez </h3>
                 <img src="../img/pilot-perez.jpg" alt="Imagen de Perez" class="pilotos__logo">
                 <p> Numero: #11</p>
                 <p> Nacionalidad: Mexico</p>
@@ -105,8 +105,8 @@
                 <p> Carreras ganadas: 4</p>
                 <p> Escuderia actual: Red Bull Racing</p>
             </article>
-            <article class="pilotos__item">
-                <h3 class="pilotos__item--titulo"> Fernando Alonso</h3>
+            <article class="pilotos__box__item">
+                <h3 class="pilotos__box__titulo"> Fernando Alonso</h3>
                 <img src="../img/pilot-alonso.jpg" alt="Imagen de Alonso" class="pilotos__logo">
                 <p> Numero: #14</p>
                 <p> Nacionalidad: España</p>
@@ -116,8 +116,8 @@
                 <p> Carreras ganadas: </p>
                 <p> Escuderia actual: Alpine Renault</p>
             </article>
-            <article class="pilotos__item">
-                <h3 class="pilotos__item--titulo"> Esteban Ocon</h3>
+            <article class="pilotos__box__item">
+                <h3 class="pilotos__box__titulo"> Esteban Ocon</h3>
                 <img src="../img/pilot-ocon.jpg" alt="Imagen de Ocon" class="pilotos__logo">
                 <p> Numero: #31</p>
                 <p> Nacionalidad: Francia</p>
@@ -127,8 +127,8 @@
                 <p> Carreras ganadas: </p>
                 <p> Escuderia actual: Alpine Renault</p>
             </article>
-            <article class="pilotos__item">
-                <h3 class="pilotos__item--titulo"> Sebastian Vettel</h3>
+            <article class="pilotos__box__item">
+                <h3 class="pilotos__box__titulo"> Sebastian Vettel</h3>
                 <img src="../img/pilot-vettel.jpg" alt="Imagen de Vettel" class="pilotos__logo">
                 <p> Numero: #5</p>
                 <p> Nacionalidad: Alemania</p>
@@ -138,8 +138,8 @@
                 <p> Carreras ganadas: </p>
                 <p> Escuderia actual: Aston Martin</p>
             </article>
-            <article class="pilotos__item">
-                <h3 class="pilotos__item--titulo"> Lance Stroll</h3>
+            <article class="pilotos__box__item">
+                <h3 class="pilotos__box__titulo"> Lance Stroll</h3>
                 <img src="../img/pilot-stroll.jpg" alt="Imagen de Stroll" class="pilotos__logo">
                 <p> Numero: #18</p>
                 <p> Nacionalidad: Canada</p>
@@ -149,8 +149,8 @@
                 <p> Carreras ganadas: </p>
                 <p> Escuderia actual: Aston Martin</p>
             </article>
-            <article class="pilotos__item">
-                <h3 class="pilotos__item--titulo"> Mick Schumacher</h3>
+            <article class="pilotos__box__item">
+                <h3 class="pilotos__box__titulo"> Mick Schumacher</h3>
                 <img src="../img/pilot-schumacher.jpg" alt="Imagen de Schumacher" class="pilotos__logo">
                 <p> Numero: #47</p>
                 <p> Nacionalidad: Alemania</p>
@@ -160,8 +160,8 @@
                 <p> Carreras ganadas: 0</p>
                 <p> Escuderia actual: Haas</p>
             </article>
-            <article class="pilotos__item">
-                <h3 class="pilotos__item--titulo"> Kevin Magnunssen</h3>
+            <article class="pilotos__box__item">
+                <h3 class="pilotos__box__titulo"> Kevin Magnunssen</h3>
                 <img src="../img/pilot-magnussen.jpg" alt="Imagen de Magnunssen" class="pilotos__logo">
                 <p> Numero: #20</p>
                 <p> Nacionalidad: Dinamarca</p>
@@ -171,8 +171,8 @@
                 <p> Carreras ganadas: 0</p>
                 <p> Escuderia actual: Haas</p>
             </article>
-            <article class="pilotos__item">
-                <h3 class="pilotos__item--titulo"> Valteri Bottas</h3>
+            <article class="pilotos__box__item">
+                <h3 class="pilotos__box__titulo"> Valteri Bottas</h3>
                 <img src="../img/pilot-bottas.jpg" alt="Imagen de Bottas" class="pilotos__logo">
                 <p> Numero: #77</p>
                 <p> Nacionalidad: Finlandia</p>
@@ -182,8 +182,8 @@
                 <p> Carreras ganadas: </p>
                 <p> Escuderia actual: Alfa Romeo</p>
             </article>
-            <article class="pilotos__item">
-                <h3 class="pilotos__item--titulo"> Guanyu Zhou</h3>
+            <article class="pilotos__box__item">
+                <h3 class="pilotos__box__titulo"> Guanyu Zhou</h3>
                 <img src="../img/pilot-zhou.jpg" alt="Imagen de Zhou" class="pilotos__logo">
                 <p> Numero: #24</p>
                 <p> Nacionalidad: China</p>
@@ -193,8 +193,8 @@
                 <p> Carreras ganadas: 0</p>
                 <p> Escuderia actual: Alfa Romeo</p>
             </article>
-            <article class="pilotos__item">
-                <h3 class="pilotos__item--titulo"> Piere Gasly</h3>
+            <article class="pilotos__box__item">
+                <h3 class="pilotos__box__titulo"> Piere Gasly</h3>
                 <img src="../img/pilot-gasly.jpg" alt="Imagen de Gasly" class="pilotos__logo">
                 <p> Numero: #10</p>
                 <p> Nacionalidad: Francia</p>
@@ -204,8 +204,8 @@
                 <p> Carreras ganadas: 1</p>
                 <p> Escuderia actual: AlphaTauri</p>
             </article>
-            <article class="pilotos__item">
-                <h3 class="pilotos__item--titulo"> Yuki Tsunoda</h3>
+            <article class="pilotos__box__item">
+                <h3 class="pilotos__box__titulo"> Yuki Tsunoda</h3>
                 <img src="../img/pilot-tsunoda.jpg" alt="Imagen de Tsunoda" class="pilotos__logo">
                 <p> Numero: #22</p>
                 <p> Nacionalidad: Japon</p>
@@ -215,8 +215,8 @@
                 <p> Carreras ganadas: 0</p>
                 <p> Escuderia actual: AlphaTauri</p>
             </article>
-            <article class="pilotos__item">
-                <h3 class="pilotos__item--titulo"> Alexander Albon</h3>
+            <article class="pilotos__box__item">
+                <h3 class="pilotos__box__titulo"> Alexander Albon</h3>
                 <img src="../img/pilot-albon.jpg" alt="Imagen de Albon" class="pilotos__logo">
                 <p> Numero: #23</p>
                 <p> Nacionalidad: Tailandia</p>
@@ -226,8 +226,8 @@
                 <p> Carreras ganadas: </p>
                 <p> Escuderia actual: Williams Racing</p>
             </article>
-            <article class="pilotos__item">
-                <h3 class="pilotos__item--titulo"> Nicholas Latifi</h3>
+            <article class="pilotos__box__item">
+                <h3 class="pilotos__box__titulo"> Nicholas Latifi</h3>
                 <img src="../img/pilot-latifi.jpg" alt="Imagen de Latifi" class="pilotos__logo">
                 <p> Numero: #6</p>
                 <p> Nacionalidad: Canada</p>
@@ -237,8 +237,8 @@
                 <p> Carreras ganadas: 0</p>
                 <p> Escuderia actual: Williams Racing</p>
             </article>
-            <article class="pilotos__item">
-                <h3 class="pilotos__item--titulo"> Lando Norris</h3>
+            <article class="pilotos__box__item">
+                <h3 class="pilotos__box__titulo"> Lando Norris</h3>
                 <img src="../img/pilot-norris.jpg" alt="Imagen de Norris" class="pilotos__logo">
                 <p> Numero: #4</p>
                 <p> Nacionalidad: Reino Unido</p>
@@ -248,8 +248,8 @@
                 <p> Carreras ganadas: </p>
                 <p> Escuderia actual: Mclaren</p>
             </article>
-            <article class="pilotos__item">
-                <h3 class="pilotos__item--titulo"> Daniel Ricciardo</h3>
+            <article class="pilotos__box__item">
+                <h3 class="pilotos__box__titulo"> Daniel Ricciardo</h3>
                 <img src="../img/pilot-ricciardo.jpg" alt="Imagen de Ricciardo" class="pilotos__logo">
                 <p> Numero: #3</p>
                 <p> Nacionalidad: Australia</p>
