--- a/pages/tabla-posiciones.html
+++ b/pages/tabla-posiciones.html
@@ -21,8 +21,8 @@
             <H1 class="marca__titulo">FORMULA ONE</H1>
             <img src="../img/logomini.jpg" alt="" class="marca__img">
         </div>
-        <nav class="nav">
-            <ul class="nav__lista">
+        <nav>
+            <ul class="nav">
                 <li class="nav__item"> <a href="../index.html"> Inicio </a></li>
                 <li class="nav__item"> <a href="../pages/tabla-posiciones.html"> Tabla Posiciones </a></li>
                 <li class="nav__item"> <a href="../pages/escuderias.html"> Escuderias </a></li>
@@ -35,9 +35,9 @@
         </section>
 
         <!-- Seccion de tablas posicion -->
-        <section class="tabla__titulo">
-            <h2 class="tabla__titu--principal"> Tabla de posiciones </h2>
-            <h3 class="tabla__titu--secundario"> Tabla de posiciones de pilotos </h3>
+        <section class="tabla__titu">
+            <h2 class="tabla__titu__principal"> Tabla de posiciones </h2>
+            <h3 class="tabla__titu__secundario"> Tabla de posiciones de pilotos </h3>
         </section>
 
         <section class="tabla__posiciones">
