terminando 3ra entrega

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&family=Work+Sans:ital,wght@1,300&display=swap"
         rel="stylesheet">
-    <title>Agustin Santander CODER</title>
+    <meta name="description" content="Informacion actual de la Formula 1 y una breve introduccion a este deporte">
+        <title>Formula 1, noticias y mas.</title>
 </head>
 
 <body class="body">
