--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,7 +12,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&family=Work+Sans:ital,wght@1,300&display=swap"
         rel="stylesheet">
-    <title>Agustin Santander CODER</title>
+    <meta name="description" content="Contactate con nosotros para saber en que podemos mejorar!">
+        <title>Contacto | Formula 1 </title>
 </head>
 
 <body class="body">
