--- a/pages/pilotos.html
+++ b/pages/pilotos.html
@@ -12,7 +12,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&family=Work+Sans:ital,wght@1,300&display=swap"
         rel="stylesheet">
-    <title>Agustin Santander CODER</title>
+    <meta name="description" content="Informacion y estadisticas de los pilotos de la actual temporada | Formula 1">
+    <title>Pilotos de la temporada 2022 | Formula 1</title>
 </head>
 
 <body class="body">
@@ -269,7 +270,8 @@
         </div>
         <h4>Seguinos en nuestras redes</h4>
         <div class="footer-redes">
-            <i class="bi bi-instagram"> <a href="https://www.instagram.com/f1/?hl=es" target="_blank"> Instagram </a> </i>
+            <i class="bi bi-instagram"> <a href="https://www.instagram.com/f1/?hl=es" target="_blank"> Instagram </a>
+            </i>
             <i class="bi bi-facebook"> <a href="https://www.facebook.com/Formula1/" target="_blank"> Facebook </a> </i>
             <i class="bi bi-youtube"> <a href="https://www.youtube.com/c/F1/videos" target="_blank"> Youtube </a> </i>
             <i class="bi bi-twitter"> <a href="https://twitter.com/F1" target="_blank"> Twitter </a> </i>
@@ -280,4 +282,5 @@
         </div>
     </footer>
 </body>
+
 </html>
