--- a/pages/tabla-posiciones.html
+++ b/pages/tabla-posiciones.html
@@ -12,7 +12,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&family=Work+Sans:ital,wght@1,300&display=swap"
         rel="stylesheet">
-    <title>Agustin Santander CODER</title>
+    <meta name="description" content="Tabla de posiciones actualizada de la temporada 2022 | Formula 1">
+        <title>Tabla de posiciones 2022 | Formula 1</title>
+
 </head>
 
 <body class="body">
