--- a/pages/pilotos.html
+++ b/pages/pilotos.html
@@ -20,7 +20,7 @@
     <header class="header" id="inicio">
         <div class="marca">
             <H1 class="marca__titulo">FORMULA ONE</H1>
-            <img src="../img/logomini.jpg" alt="" class="marca__img">
+            <img src="../img/logomini.jpg" alt="Logo oficial de la formula 1" class="marca__img">
         </div>
         <nav>
             <ul class="nav">
@@ -47,8 +47,6 @@
                 <p> Nacionalidad: Reino Unido</p>
                 <p> Fecha Nacimiento: 07/01/1985</p>
                 <p> Campeonatos: 7</p>
-                <p> Carreras disputadas: 305</p>
-                <p> Carreras ganadas: 103</p>
                 <p> Escuderia actual: Mercedes</p>
             </article>
             <article class="pilotos__box__item">
@@ -58,8 +56,6 @@
                 <p> Nacionalidad: Reino Unido</p>
                 <p> Fecha Nacimiento: 15/02/1998 </p>
                 <p> Campeonatos: 0 </p>
-                <p> Carreras disputadas: </p>
-                <p> Carreras ganadas: 0</p>
                 <p> Escuderia actual: Mercedes</p>
             </article>
             <article class="pilotos__box__item">
@@ -69,8 +65,6 @@
                 <p> Nacionalidad: Monaco</p>
                 <p> Fecha Nacimiento: 16/10/1997</p>
                 <p> Campeonatos: 0</p>
-                <p> Carreras disputadas: </p>
-                <p> Carreras ganadas: </p>
                 <p> Escuderia actual: Ferrari</p>
             </article>
             <article class="pilotos__box__item">
@@ -80,8 +74,6 @@
                 <p> Nacionalidad: España</p>
                 <p> Fecha Nacimiento: 01/09/1994</p>
                 <p> Campeonatos: 0 </p>
-                <p> Carreras disputadas: </p>
-                <p> Carreras ganadas: 1 </p>
                 <p> Escuderia actual: Ferrari </p>
             </article>
             <article class="pilotos__box__item">
@@ -91,8 +83,6 @@
                 <p> Nacionalidad: Holanda </p>
                 <p> Fecha Nacimiento: 30/09/1997 </p>
                 <p> Campeonatos: 1 </p>
-                <p> Carreras disputadas: </p>
-                <p> Carreras ganadas: </p>
                 <p> Escuderia actual: Red Bull Racing</p>
             </article>
             <article class="pilotos__box__item">
@@ -102,8 +92,6 @@
                 <p> Nacionalidad: Mexico</p>
                 <p> Fecha Nacimiento: 26/01/1990</p>
                 <p> Campeonatos: 0</p>
-                <p> Carreras disputadas: </p>
-                <p> Carreras ganadas: 4</p>
                 <p> Escuderia actual: Red Bull Racing</p>
             </article>
             <article class="pilotos__box__item">
@@ -113,8 +101,6 @@
                 <p> Nacionalidad: España</p>
                 <p> Fecha Nacimiento: 29/07/1981</p>
                 <p> Campeonatos: 2</p>
-                <p> Carreras disputadas: </p>
-                <p> Carreras ganadas: </p>
                 <p> Escuderia actual: Alpine Renault</p>
             </article>
             <article class="pilotos__box__item">
@@ -124,8 +110,6 @@
                 <p> Nacionalidad: Francia</p>
                 <p> Fecha Nacimiento: 17/09/1996</p>
                 <p> Campeonatos: 0</p>
-                <p> Carreras disputadas: </p>
-                <p> Carreras ganadas: </p>
                 <p> Escuderia actual: Alpine Renault</p>
             </article>
             <article class="pilotos__box__item">
@@ -135,8 +119,6 @@
                 <p> Nacionalidad: Alemania</p>
                 <p> Fecha Nacimiento: 03/04/1987</p>
                 <p> Campeonatos: 4</p>
-                <p> Carreras disputadas: </p>
-                <p> Carreras ganadas: </p>
                 <p> Escuderia actual: Aston Martin</p>
             </article>
             <article class="pilotos__box__item">
@@ -146,8 +128,6 @@
                 <p> Nacionalidad: Canada</p>
                 <p> Fecha Nacimiento: 29/10/1998</p>
                 <p> Campeonatos: 0</p>
-                <p> Carreras disputadas: </p>
-                <p> Carreras ganadas: </p>
                 <p> Escuderia actual: Aston Martin</p>
             </article>
             <article class="pilotos__box__item">
@@ -157,8 +137,6 @@
                 <p> Nacionalidad: Alemania</p>
                 <p> Fecha Nacimiento: 22/03/1999</p>
                 <p> Campeonatos: 0</p>
-                <p> Carreras disputadas: </p>
-                <p> Carreras ganadas: 0</p>
                 <p> Escuderia actual: Haas</p>
             </article>
             <article class="pilotos__box__item">
@@ -168,8 +146,6 @@
                 <p> Nacionalidad: Dinamarca</p>
                 <p> Fecha Nacimiento: 05/10/1992</p>
                 <p> Campeonatos: 0</p>
-                <p> Carreras disputadas: </p>
-                <p> Carreras ganadas: 0</p>
                 <p> Escuderia actual: Haas</p>
             </article>
             <article class="pilotos__box__item">
@@ -179,8 +155,6 @@
                 <p> Nacionalidad: Finlandia</p>
                 <p> Fecha Nacimiento: 28/08/1989</p>
                 <p> Campeonatos: 0</p>
-                <p> Carreras disputadas: </p>
-                <p> Carreras ganadas: </p>
                 <p> Escuderia actual: Alfa Romeo</p>
             </article>
             <article class="pilotos__box__item">
@@ -190,8 +164,6 @@
                 <p> Nacionalidad: China</p>
                 <p> Fecha Nacimiento: 30/05/1999</p>
                 <p> Campeonatos: 0</p>
-                <p> Carreras disputadas: </p>
-                <p> Carreras ganadas: 0</p>
                 <p> Escuderia actual: Alfa Romeo</p>
             </article>
             <article class="pilotos__box__item">
@@ -201,8 +173,6 @@
                 <p> Nacionalidad: Francia</p>
                 <p> Fecha Nacimiento: 07/02/1996</p>
                 <p> Campeonatos: 0</p>
-                <p> Carreras disputadas: </p>
-                <p> Carreras ganadas: 1</p>
                 <p> Escuderia actual: AlphaTauri</p>
             </article>
             <article class="pilotos__box__item">
@@ -212,8 +182,6 @@
                 <p> Nacionalidad: Japon</p>
                 <p> Fecha Nacimiento: 11/05/2000</p>
                 <p> Campeonatos: 0</p>
-                <p> Carreras disputadas: </p>
-                <p> Carreras ganadas: 0</p>
                 <p> Escuderia actual: AlphaTauri</p>
             </article>
             <article class="pilotos__box__item">
@@ -223,8 +191,6 @@
                 <p> Nacionalidad: Tailandia</p>
                 <p> Fecha Nacimiento: 23/03/1996</p>
                 <p> Campeonatos: 0</p>
-                <p> Carreras disputadas: </p>
-                <p> Carreras ganadas: </p>
                 <p> Escuderia actual: Williams Racing</p>
             </article>
             <article class="pilotos__box__item">
@@ -234,8 +200,6 @@
                 <p> Nacionalidad: Canada</p>
                 <p> Fecha Nacimiento: 29/06/1995</p>
                 <p> Campeonatos: 0</p>
-                <p> Carreras disputadas: </p>
-                <p> Carreras ganadas: 0</p>
                 <p> Escuderia actual: Williams Racing</p>
             </article>
             <article class="pilotos__box__item">
@@ -245,8 +209,6 @@
                 <p> Nacionalidad: Reino Unido</p>
                 <p> Fecha Nacimiento: 13/11/1999</p>
                 <p> Campeonatos: 0</p>
-                <p> Carreras disputadas: </p>
-                <p> Carreras ganadas: </p>
                 <p> Escuderia actual: Mclaren</p>
             </article>
             <article class="pilotos__box__item">
@@ -256,8 +218,6 @@
                 <p> Nacionalidad: Australia</p>
                 <p> Fecha Nacimiento: 01/07/1989</p>
                 <p> Campeonatos: 0</p>
-                <p> Carreras disputadas: </p>
-                <p> Carreras ganadas: </p>
                 <p> Escuderia actual: Mclaren</p>
             </article>
         </section>
