--- a/pages/escuderias.html
+++ b/pages/escuderias.html
@@ -20,7 +20,7 @@
     <header class="header" id="inicio">
         <div class="marca">
             <H1 class="marca__titulo">FORMULA ONE</H1>
-            <img src="../img/logomini.jpg" alt="" class="marca__img">
+            <img src="../img/logomini.jpg" alt="Logo oficial de la formula 1" class="marca__img">
         </div>
         <nav>
             <ul class="nav">
